# AI4UrbanScience

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai4us/: __init__.py  client.py  config.py  fitting.py  io.py  metrics.py  models.py  prompts.py  theories.py  viz.py
data/: MANIFEST.md  README.md
data/examples/: README.md
data/examples/prompt_engineering_perceptual/: stage1_blueprint.json  stage1_perceptual_blueprint.txt  stage1_trueskill_blueprint.json  stage2_raw_synthetic_Independent Sampling.xlsx  stage2_raw_synthetic_Joint Sampling.xlsx  stage2_sampled_pairs_metadata_Joint.csv  (+6 more)
docs/: figure_script_map.md
experiments/: __init__.py  _bootstrap.py
experiments/01_urban_scaling_law/: README.md  analyze.py  config.yaml  figure1.py  generate.py  sensitivity.py
experiments/02_distance_decay/: README.md  analyze.py  config.yaml  generate.py  visualize.py
experiments/03_urban_vitality/: README.md  analyze.py  config.yaml  figure2.py  generate_attributes.py  score_livability.py
experiments/04_perception_alignment/: README.md  config.yaml  figure3.py  kappa_scores.py  pairwise_eval.py  trueskill_scoring.py
experiments/05_synthetic_intervention/: README.md  clip_diversity.py  config.yaml  generate_images.py  segment_and_analyze.py
experiments/06_distribution_divergence/: README.md  compute_divergence.py  config.yaml  extract_real_data.py  figure4.py
experiments/07_calibration_ot/: README.md  calibration.py  config.yaml
experiments/08_prompt_engineering/: README.md  config.yaml  pipeline_perceptual.py  pipeline_symbolic.py
(+454 files in other folders)
